--- a/assets/myMedia.scss
+++ b/assets/myMedia.scss
@@ -5,6 +5,11 @@
 	.circleIcons {
 		width: 50%;
 	}
+	.navbar-brand {
+		height: 80px;
+		display: flex;
+		align-items: center;
+	}
 }
 @media (max-width: 768px) {
 	.headerRotatingAnimation,
@@ -24,13 +29,21 @@
 			}
 		}
 	}
+	.topBar {
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.navbar .container {
+		justify-content: space-around;
+	}
 	.dailyOffer,
-	.ourTeam,
+	.ourTeam .container .row:nth-child(1),
 	.testimonials,
 	.blogs {
 		.circleIcons i {
 			width: auto;
 			height: auto;
+			font-size: smaller;
 		}
 	}
 	.dailyOffer,
